fix filter chevron click handling on Firefox
Move <legend> out of <button> to fix Firefox event propagation issue
and fix inverted chevron rotation logic in classList.toggle.

--- a/wies/core/static/css/filters/filters.css
+++ b/wies/core/static/css/filters/filters.css
@@ -377,6 +377,18 @@
   margin: 0 0 0.5rem 0;
 }
 
+.checkbox-filter__legend-sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .checkbox-filter__header {
   display: flex;
   align-items: center;
